--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -16,14 +16,8 @@
 
     "about": {
         "title": "Sobre mi",
-        "description": "Soy un desarrollador apasionado por el diseño de páginas. Uno de mis objetivos es estar en un equipo de trabajo amable en el que pueda aportar mis conocimientos y sea posible aprender de ellos. Sigo practicando para mejorar en React y también mis prácticas. En el futuro me gustaría aprender Backend, para ser un desarrollador completo.",
-        "experience-title": "Experiencia",
-        "experience": {"exp1": "Portafolio personal desde 0", "exp2": "Clon de la página de Coinbase", "exp3": "Aplicación de tareas"},
-        "certificate-title": "Certificados",
-        "certificate" : {"html-css": "HTML y CSS", "git": "GIT"},
-        "education-title": "Educación",
-        "education": {"openbootcamp": "Estudié en OpenBootcamp", "autodidact": "Autodidacta"}
-    },
+        "description": "Soy un desarrollador apasionado por el diseño de páginas. Uno de mis objetivos es estar en un equipo de trabajo amable en el que pueda aportar mis conocimientos y sea posible aprender de ellos. Sigo practicando para mejorar en React y también mis prácticas. En el futuro me gustaría aprender Backend, para ser un desarrollador completo."
+        },
 
     "skills": {
         "title": "Mis habilidades"
