--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,38 +1,42 @@
 {
-    "home": {
-        "frontend": "Desarrollador Frontend",
-        "description": "Hola!, soy un Desarrollador Web junior con React, disfruto programar y estilar paginas.",
-        "nav-link-1": "Inicio",
-        "nav-link-2": "Proyectos",
-        "nav-link-3": "Sobre mi",
-        "nav-link-4": "Habilidades",
-        "nav-link-5": "Contacto"
-    },
+  "home": {
+    "frontend": "Desarrollador Frontend",
+    "description": "Apasionado de la programación web con React y el desarrollo autodidacta.",
+    "nav-link-1": "Inicio",
+    "nav-link-2": "Proyectos",
+    "nav-link-3": "Sobre mi",
+    "nav-link-4": "Habilidades",
+    "nav-link-5": "Contacto"
+  },
 
-    "projects": {
-        "my-projects": "Mis projectos",
-        "demo": "Prueba"
-    },
+  "projects": {
+    "my-projects": "Mis projectos",
+    "demo": "Prueba"
+  },
 
-    "about": {
-        "title": "Sobre mi",
-        "description": "Soy un desarrollador apasionado por el diseño de páginas. Uno de mis objetivos es estar en un equipo de trabajo amable en el que pueda aportar mis conocimientos y sea posible aprender de ellos. Sigo practicando para mejorar en React y también mis prácticas. En el futuro me gustaría aprender Backend, para ser un desarrollador completo."
-        },
+  "about": {
+    "title": "Sobre mi",
+    "description": "Creativo, curioso y en constante aprendizaje. Centrado en encontrar y resolver el problema y diseñar páginas. Capaz de hacer páginas web estéticas y funcionales a pedido del cliente.",
+    "experience-title": "Experiencia",
+    "experience": {"exp1": "Men's House barber", "exp2": "Cookta", "exp3": "Coinbase page"},
+    "experience-description": {"exp1": "Sitio web creado desde 0 para una barberia con un sistema creado por mi para agendar citas.", "exp2": "Sitio web realizado para una panadería, aplicando nuevas técnicas y un rápido desarrollo.", "exp3": "Clon estático de la página de Coinbase, hecho con HTML, Sass, Bootstrap."}
 
-    "skills": {
-        "title": "Mis habilidades"
-    },
+},
 
-    "contact": {
-        "title": "Contactame",
-        "name": "Nombre",
-        "email": "Email",
-        "comments": "Comentarios",
-        "submit": "Enviar"
-    },
+  "skills": {
+    "title": "Mis habilidades"
+  },
 
-    "footer": {
-        "description": "Desarrollador Frontend con ReactJS, amante de hacer soluciones y estilar paginas.",
-        "made":" Hecho por "
-    }
+  "contact": {
+    "title": "Contactame",
+    "name": "Nombre",
+    "email": "Email",
+    "comments": "Comentarios",
+    "submit": "Enviar"
+  },
+
+  "footer": {
+    "description": "Desarrollador Frontend con ReactJS, amante de hacer soluciones y estilar paginas.",
+    "made": " Hecho por "
+  }
 }
