--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -10,7 +10,7 @@
   },
 
   "projects": {
-    "my-projects": "Mis proyectos",
+    "my-projects": "Mi experiencia laboral",
     "demo": "Prueba"
   },
 
