Change translates and PDF

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -17,7 +17,7 @@
     "exp-description-0": "Trabajo como Desarrollador Frontend en TPEOficial, una startup que ofrece servicios de software y herramientas de IA. Mis responsabilidades incluyen desarrollo frontend, creación de emails y la contribución de ideas creativas, junto a un equipo colaborativo con fuerte comunicación.",
     "exp-description-1": "Práctica profesional de 5 semanas enfocada en trabajo en equipo, comunicación y programación, desarrollando un MVP desde cero con backend, frontend, QA, diseño y revisiones de código diarias.",
     "exp-description-2": "Como desarrollador web, construí un sistema de reservas responsive con React y TailwindCSS, gestioné el backend con Firebase y creé un panel de admin. Esto redujo y optimizó la carga de trabajo del gerente.",
-    "more-projects": "Más proyectos y trabajo en github!"
+    "more-projects": "Más proyectos y trabajo en github y linkedin!"
   },
 
   "about": {
