New subtitle and navbar improves in progress

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,6 +1,7 @@
 {
   "home": {
     "frontend": "Front-end Developer",
+    "challenges": "I turn challenges into solutions.",
     "description-1": "With",
     "description-2": " +2 year ",
     "description-3": "of experience using React, Typescript y Next.js.",
