--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -1,6 +1,7 @@
 {
   "home": {
     "frontend": "Desarrollador Frontend",
+    "challenges": "Transformo los desafíos en soluciones.",
     "description-1": "Con",
     "description-2": " +2 años ",
     "description-3": "de experiencia utilizando React, Typescript y Next.js.",
