Translations and asset

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -21,7 +21,9 @@
     "exp-description-0": "I work as a Frontend Developer at TPEOficial, a startup delivering software services and AI tools. My role includes frontend development, email creation, and contributing creative ideas, alongside a collaborative team with strong communication.",
     "exp-description-1": "Five-week professional internship focused on teamwork, communication, and programming. Developed an MVP, web styles, and data structures from scratch, collaborating on backend/frontend, QA, design, and daily code reviews.",
     "exp-description-2": "As a web developer, I built a responsive booking system with React and TailwindCSS, managed the backend with Firebase, and created an admin panel. This streamlined operations and reduced the manager's workload.",
-    "more-projects": "More projects and work on github and linkedin!"
+    "more-projects-1": "Check out more on",
+    "more-projects-2": "or",
+    "more-projects-3": ", and see other demos on my"
   },
 
   "about": {
