--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -3,7 +3,7 @@
     "frontend": "Front-end Developer",
     "challenges": "I turn challenges into solutions.",
     "description-1": "With",
-    "description-2": " 3 year ",
+    "description-2": " 3 years ",
     "description-3": "of experience using React, Typescript y Next.js.",
     "description-4": "Open my resume!",    
     "nav-link-1": "Home",
